# App

./: .env.example  .gitignore  CHANGES_SUMMARY.md  FINAL_SUMMARY.md  HOW_TO_GET_FULL_DATA.md  MIGRATION_PLAN.md  MIGRATION_REPORT.md  Makefile  PROJECT_TREE.md  QUICK_FIX.md  README.md  check_status.sh  pipeline.py  prefetch.py  pyproject.toml  requirements.txt  test_finnhub.py  test_finnhub_labels.py
app/: backtest.py  calibration.py  calibration_runner.py  data.py  leadership.py  main.py  migrate_to_duckdb_postgres.py  model.py  preprocessing.py  service.py  tests_shape_safety.py  utils.py  validation.py
app/logs/: compute_log.csv
core/: __init__.py  config.py  constants.py
core/utils/: file_utils.py  http_utils.py
equations/: __init__.py
equations/financial/: capital.py  growth.py  margins.py
equations/statistics/: timeseries.py  transforms.py
tests/: conftest.py
tests/fixtures/: golden_data.json
tests/unit/: test_transforms.py
